// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reducer: Report Options General cases add a filter 1`] = `
Object {
  "filters": Array [
    Object {
      "type": "Example Domain",
      "value": "sparkpost.com",
    },
  ],
  "from": 1970-01-01T00:00:00.000Z,
  "metrics": Array [],
  "relativeRange": "day",
  "to": 1970-01-02T00:00:00.000Z,
}
`;

exports[`Reducer: Report Options General cases add multiple filters 1`] = `
Object {
  "filters": Array [
    Object {
      "type": "Example Domain",
      "value": "sparkpost.com",
    },
    Object {
      "type": "Example Domain",
      "value": "another.sparkpost.com",
    },
  ],
  "from": 1970-01-01T00:00:00.000Z,
  "metrics": Array [],
  "relativeRange": "day",
  "to": 1970-01-02T00:00:00.000Z,
}
`;

exports[`Reducer: Report Options General cases set report options 1`] = `
Object {
  "filters": Array [],
  "from": 2018-01-01T00:00:00.000Z,
  "metrics": Array [
    1,
    2,
    3,
  ],
  "relativeRange": "day",
  "to": 2018-01-02T00:00:00.000Z,
}
`;
